Pesan commit yang menjelaskan perubahan

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Menu 2"
+                        android:text="Peta"
                         android:textColor="#172646"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -123,7 +123,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Menu 3"
+                        android:text="Qr Code"
                         android:textColor="#172646"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -146,7 +146,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Menu 4"
+                        android:text="Adiwiyata"
                         android:textColor="#172646"
                         android:textSize="16sp" />
                 </LinearLayout>
