--- a/app/src/main/res/layout/activity_visi.xml
+++ b/app/src/main/res/layout/activity_visi.xml
@@ -1,78 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFFFF"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewPeta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="SELAMAT KAMU MASUK KE DALAM HALAMAN PETA"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"
-        android:gravity="center"/>
-
+    <!-- ImageView untuk menampilkan gambar QR di tengah halaman -->
     <ImageView
-        android:id="@+id/imageViewPohon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/buttonimgpeta"
+        android:layout_width="247dp"
+        android:layout_height="290dp"
+        android:contentDescription="Peta Image"
         android:src="@drawable/peta"
-        app:layout_constraintTop_toBottomOf="@id/textViewPeta"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:adjustViewBounds="true"
-        android:maxWidth="300dp"
-        android:maxHeight="300dp"/>
+        app:layout_constraintBottom_toTopOf="@id/textView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4" />
 
-    <TextView
-        android:id="@+id/textViewFungsiPeta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Fungsi Peta"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/imageViewPohon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"
-        android:gravity="center"/>
-
-    <TextView
-        android:id="@+id/textViewFungsiPetaContent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="1. Menunjukkan lokasi dengan akurat.\n2. Membantu navigasi dan mencari rute tercepat.\n3. Menyediakan informasi lokasi menarik."
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/textViewFungsiPeta"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:padding="16dp"
-        android:background="@drawable/content_background"/>
-
+    <!-- Button Go Peta -->
     <Button
-        android:id="@+id/buttonGoBack"
+        android:id="@+id/buttonGoPeta"
+        android:layout_width="226dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="320dp"
+        android:backgroundTint="@color/white"
+        android:text="Go Peta"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <!-- TextView menampilkan pesan -->
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GO BACK"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewFungsiPetaContent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/black"
-        android:textColor="#FFFFFFFF"
-        android:padding="12dp"
-        android:layout_marginBottom="32dp"/>
+        android:text="ini adalah halaman peta smk n 2 yogyakarta"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/buttonGoBack3"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonimgpeta"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <!-- Button Go Back -->
+    <Button
+        android:id="@+id/buttonGoBack3"
+        android:layout_width="226dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:text="Go Back"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="53dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
